JQuery and CSS added. Initial AJAX call included.

--- a/views/index.html
+++ b/views/index.html
@@ -1,13 +1,29 @@
 <head>
     <link rel='stylesheet' href='app.css' type="text/css" />
     
+    
+    <script       
+        src="https://code.jquery.com/jquery-3.5.1.js" 
+        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" 
+        crossorigin="anonymous"> 
+    </script> 
+
+        
+
 </head>
 
 <body>
-    
-<h1>HTML page!</h1>
-<p>Todos will be listed here!</p>
+  <header>
+    <h1>todo<span>list</span></h1>
+    <h2>A simple todo list app built with node</h2>
+  </header>
+  
+  <section class="form">
+    <input type="text" id="todoInput" placeholder="Insert your task here...">
+  </section>
 
-<script type='text/javascript' src="app.js"></script>
+  <ul class="list">
+  </ul>
 
+<script type="text/javascript" src="app.js"></script>
 </body>
